# sc2reader-plugins

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/sc2reader_plugins/: __init__.py  apm_tracker.py  base_plugin.py  event_second_corrector.py  player_stats_tracker.py  sq_tracker.py  utils.py  worker_tracker.py
tests/: test_apm_tracker.py  test_event_second_corrector.py  test_player_stats_tracker.py  test_sq_tracker.py  test_worker_tracker.py
tests/replays/: 1v1.SC2Replay  1v1_computer.SC2Replay  2v2.SC2Replay
