[project]
name = "sc2reader-plugins"
version = "0.1.0"
description = "Nice plugins for sc2reader"
authors = [
    { name = "NumberPigeon", email = "number108@foxmail.com" }
]
dependencies = [
    "sc2reader @ git+https://github.com/ggtracker/sc2reader.git@upstream",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true
